--- a/Python/learning/Introduction to Python/Introduction/About/task-info.yaml
+++ b/Python/learning/Introduction to Python/Introduction/About/task-info.yaml
@@ -6,5 +6,7 @@ files:
   learner_created: false
 feedback_link: https://docs.google.com/forms/d/e/1FAIpQLSfRlDlldKfuq-cHMNFfHMER61P1PRIan7KG6yp1GvaweDI7GA/viewform?usp=pp_url&entry.2103429047=Introduction+/+About
 status: Solved
+feedback:
+  time: "Sun, 27 Nov 2022 11:23:00 UTC"
 record: -1
 post_submission_on_open: true
